--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -83,7 +83,7 @@
   }
 
   .filter-select {
-    button {
+    .round-btn {
       border: 1px solid black;
       border-radius: 50%;
     }
@@ -202,7 +202,18 @@ main {
   padding: 10px 15px;
 
   .social {
-    i:not(:last-child) {
+    .link {
+      transition: all 0.3s ease;
+      &:hover,
+      &:visited,
+      &:focus {
+        outline: none;
+      }
+      &:hover {
+        color: #ef737f;
+      }
+    }
+    .link:not(:last-child) {
       margin-right: 10px;
     }
   }
