separated components from dashboard page

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,8 +16,8 @@
 $prime_red: #ef737f;
 $prime_blue: #6e5f7e;
 $text_gray: #999997;
-$text_red: #a22d2b;
-$text_green: #518d58;
+$text_red: #be1622;
+$text_green: #009640;
 $bg_gray: #f7f7f7;
 $charcoal: #3c3d3a;
 
